formatted with intellij (java only)